--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -9,6 +9,7 @@
 
 .card:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .content {
@@ -44,4 +45,5 @@ img {
 
 .card1:hover {
   transform: scale(1.1);
+  cursor: pointer;
 }
